[package]
name = "ws2818-rgb-led-spi-driver"
description = "Simple, stripped down, educational driver for WS28XX (WS2811) RGB LED (chains). It uses SPI device for timing/clock. Needs Linux and works definitely on Raspberry Pi."
version = "1.0.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
exclude = [
    "examples",
    ".travis.yml",
]
keywords = ["spi", "ws2811", "ws2812", "ws2818", "neopixel"]
categories = ["hardware-support"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ws2818-rgb-led-spi-driver"
repository = "https://github.com/phip1611/ws2818-rgb-led-spi-driver"
documentation = "https://docs.rs/ws2818-rgb-led-spi-driver/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.4.0"
