[package]
name = "ws2818-rgb-led-spi-driver"
description = "Simple, stripped down, educational, no_std-compatible driver for WS28XX (WS2811/12) RGB LEDs. Uses SPI device for timing/clock, and works definitely on Linux/Raspberry Pi."
version = "2.0.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
exclude = [
    "examples",
    ".travis.yml",
]
keywords = ["spi", "ws2811", "ws2812", "ws2818", "neopixel"]
categories = ["hardware-support", "no-std"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ws2818-rgb-led-spi-driver"
repository = "https://github.com/phip1611/ws2818-rgb-led-spi-driver"
documentation = "https://docs.rs/ws2818-rgb-led-spi-driver/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# by default this crate needs "std" and uses "spidev" to accessSPI device on Linux
default = ["adapter_spidev"]
adapter_spidev = ["spidev"]

[dependencies]
spidev = { version = "0.4.1", optional = true }
